fixed a visual problem with bottom scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,8 @@
 *{
   color: #1C2426;
   font-family: 'Acme', sans-serif;
+  
+  overflow-x: hidden;
 }
 
 body {
@@ -94,7 +96,7 @@ li  {
 }
 
 .typing {
-  width: 100%;
+  max-width: 95%;
   text-align: center;
   display: flex;
   justify-content: center;
